# FocusOS

./: .gitignore  AGENT.md  CMakeLists.txt  DECISIONS.md  INSTALL.md  README.md  focusos.md  instructions.md  lockdown.md  note.txt  notes.txt  questions.md  workflow_extensibility.md
.githooks/: post-merge
assets/music/: README.txt
assets/qml/: theme.js
docs/: architecture-decisions.md  blocker-testing-machine.md  browser-blocker.md  macos-backend.md
packaging/linux/: 90-focusos-logind.conf  focusos-relaunch.sh  focusos-restore-sessions.sh  focusos-revert.sh  focusos-session.sh  focusos-update.sh  focusos-watchdog.sh  focusos.desktop  install.sh
packaging/linux/config/: kglobalshortcutsrc  kwinrc  kwinrulesrc
resources/Cold Turkey/: ctBackground.js  ctContent.js  ctFilePermissions.html  ctFrame.js  ctPermissions.html  ctPermissions.js  ctPrivatePermissions.html  ctUserConsent.html  ctUserConsent.js  manifest.json
resources/Cold Turkey/_metadata/: computed_hashes.json  verified_contents.json
resources/focusos-blocker/: README.md  blocked.html  blocked.js  ctBackground.js  ctContent.js  ctMenu.html  ctMenu.js  manifest.json
resources/focusos-blocker/host/: allowlist.txt  focusos_blocker_host.py  install-host.sh
scripts/: apply-update.sh  blocker-doctor.sh  focusos-blocker-pack.sh  focusos-blocker-serve.sh  focusos-policy-install.sh  setup-testing-machine.sh
src/: main.cpp
src/blocker/: BlockerHost.cpp  BlockerHost.h  BlockerPolicy.cpp  BlockerPolicy.h  BlockerSecret.h
src/core/: InspirationStore.cpp  InspirationStore.h  MediaKeys.cpp  MediaKeys.h  MusicEngine.cpp  MusicEngine.h  NotesStore.cpp  NotesStore.h  RoutineManager.cpp  RoutineManager.h  StatsStore.cpp  StatsStore.h  SystemStatus.cpp  SystemStatus.h  TOTPEngine.cpp  TOTPEngine.h  Timer.cpp  Timer.h  Updater.cpp  Updater.h
src/platform/: PlatformBackend.h
src/platform/linux/: LinuxBackend.cpp  LinuxBackend.h  NetGate.cpp  NetGate.h
src/platform/macos/: MacBackend.cpp  MacBackend.h  MacBackendNative.h  MacBackendNative.mm
src/shell/: ActivitiesPanel.qml  AmbientLayer.qml  InfoPanel.qml  Main.qml  MissionView.qml  ProgressOverlay.qml  RoutineEditorDialog.qml  ShellWindow.cpp  ShellWindow.h  UnlockModal.qml
tests/: totp_tests.cpp
